# created by Facundo Franchino March 2026
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-fdn"
version = "0.1.0"
description = "Real-time deployment of FLAMO audio graphs via FAUST"
authors = [
    {name = "Facundo Franchino"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
full = [
    "flamo",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
